tweaked circles for events page, fix weird spacing for mobile responsive show routes

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,6 +39,13 @@ body {
 	padding-top: 76px;
 }
 
+.sticky-top {
+
+	@media (max-width: 576px) {
+		position: relative;
+	}
+}
+
 .sticky-offset {
 	top: 96px;
 }
